Commiting index.html file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>My Git Practical</h1>
-    <p>This Repo is created to check gitHub</p>
+    <p>This file is created to fix issue on gitHub</p>
   </body>
 </html>
